# cat

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt  README.md  basic.cpp  exmp_01.cpp
graphics/: cat_logo_0v0.ai
include/: ac.h  acGlobal.h  acLoop.h  acMain.h  acServer.h  af.h  afConsole.h  afFile.h  afFont.h  afStream.h  afTimer.h  afUtilities.h  caf.hpp  cat.h  cluster.hpp  cmd.hpp  co.h  coord.hpp  ge.h  geCoord.h  geRef.h  gp.h  gpBox.h  gpEmpty.h  gpFilled.h  gpFonted.h  gpFrame.h  gpLabel.h  gpLine.h  gpMaterial.h  gpPoint.h  gpPolygon.h  gpScene.h  gpSphere.h  gpStroked.h  gpTube.h  gtTools.h  layer.hpp  log.hpp  pixel.hpp  (+15 more)
include/cat/: client.hpp  cmd.hpp  console.hpp
include/data/: coord.hpp  pixel.hpp
include/oof/: oof.h
lib/: CMakeLists.txt
lib/Diligent/include/DiligentSamples/SampleBase/include/: InputController.hpp
lib/Diligent/include/DiligentTools/Imgui/src/: ImGuiUtils.cpp
lib/Diligent/include/DiligentTools/NativeApp/include/: AppBase.hpp
lib/Diligent/x64-Debug/lib/: Archiver_64d.lib  GraphicsEngineD3D12_64d.lib  GraphicsEngineOpenGL_64d.lib  GraphicsEngineVk_64d.lib
lib/SDL/include/SDL3/: SDL_revision.h
lib/SDL/x64-Debug/lib/: SDL3.lib
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  Notes.md  acLoop.cpp  acMain.cpp  acServer.cpp  ac_Main.cpp  ac_Server.cpp  afFile.cpp  afFont.cpp  cat.cpp  cluster.cpp  cmd.cpp  coord.cpp  data.cpp  geCoord.cpp  geRef.cpp  gp.cpp  gpBox.cpp  gpEmpty.cpp  gpFilled.cpp  gpFonted.cpp  gpFrame.cpp  gpLabel.cpp  gpLine.cpp  gpMaterial.cpp  gpPoint.cpp  gpPolygon.cpp  gpScene.cpp  gpSphere.cpp  gpStroked.cpp  gpTube.cpp  log.cpp  pixel.cpp  rcCore.cpp  rcDCs.cpp  sensor.cpp  uiBar.cpp  uiMouse.cpp  uiPad.cpp  uiPadGL.cpp  (+4 more)
src/client/: CMakeLists.txt  README.md  catClient.cpp  catClient.hpp  client.cpp  client.hpp
src/common/: CMakeLists.txt  cmd.hpp  coAbc.cpp  coAbc.hpp  console.cpp  console.hpp  error.hpp  log.cpp  log.hpp  socket.hpp  uiAbc.cpp  uiAbc.hpp
src/common/co/: coAbc.cpp  coAbc.hpp  coDrawable.cpp  coDrawable.hpp  coSet.cpp  coSet.hpp  coStream.hpp  coStreamable.cpp  coStreamable.hpp
src/common/ui/: uiAbc.cpp  uiAbc.hpp  uiButton.cpp  uiButton.hpp
src/data/: caf.cpp  cluster.cpp  data.cpp  hit.cpp  layer.cpp  plane.cpp
src/server/: CMakeLists.txt  README.md  SampleBase.cpp  SampleBase.hpp  cmd.cpp  cmd.hpp  context.hpp  global.hpp  gui.cpp  gui.hpp  main.cpp  main.hpp  server.cpp  srvGlobal.hpp  srvMain.cpp  srvMain.hpp  window.cpp  window.hpp
src/server/data/: cat.cpp  plane.hpp  sensor.hpp
src/server/old/: acLoop.h  acMain.cpp  acMain.h  af.h  afFile.cpp  afFile.h  afFont.cpp  afStream.h  afUtilities.cpp  ge.h  geCoord.h  gp.cpp  gpFilled.h  gpFonted.cpp  gpFonted.h  gpLabel.cpp  gpLabel.h  gpLine.h  gpMaterial.h  gpPolygon.cpp  gpScene.h  gpStroked.h  gpTube.h  rc.h  rcCore.h  rcDCs.cpp  rcDCs.h  rcMacros.h  uiBar.cpp  uiBar.h  uiMouse.cpp  uiPad.cpp  uiPadGL.cpp  uiPadGUI.h  uiView.cpp  uiView.h  uiWindow.cpp
src/server/old/data/: caf.hpp  data.hpp  hit.hpp
